settings: Fix default streams scrolling issue.
The progressively rendered table extends too far down, causing the page
to scroll needlessly, which then causes there to be two scrollbars — a
scrollbar for the table and a view scrollbar outside that.

Fixes: #6391.

--- a/static/styles/settings.css
+++ b/static/styles/settings.css
@@ -600,12 +600,12 @@ input[type=checkbox].inline-block {
 
 .progressive-table-wrapper {
     position: relative;
-    max-height: calc(95vh - 200px);
+    max-height: calc(95vh - 220px);
     overflow: auto;
 }
 
 #admin-default-streams-list .progressive-table-wrapper {
-    max-height: calc(95vh - 270px);
+    max-height: calc(95vh - 280px);
 }
 
 .bots_list {
